<resources>
    <string name="app_name">AlarmEx</string>
    <string name="alarm">알람</string>
    <string name="repeat">반복</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="stop">정지</string>
    <string name="notification_channel_id">"notification_channel_id"</string>
    <string name="notification_channel_name">"notification_channel_name"</string>
</resources>
