<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_underscore"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="06:55"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매주 "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textview_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:text="@string/mon"/>

                <TextView
                    android:id="@+id/textview_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:text="@string/tue"/>
                <TextView
                    android:id="@+id/textview_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:text="@string/wed"/>
                <TextView
                    android:id="@+id/textview_thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:text="@string/thu"/>
                <TextView
                    android:id="@+id/textview_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:text="@string/fri"/>
                <TextView
                    android:id="@+id/textview_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:text="@string/sat"/>
                <TextView
                    android:id="@+id/textview_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/sun"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp">

            <Switch
                android:id="@+id/switch_onoff"
                android:layout_width="50dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>