<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TimePicker
            android:id="@+id/timepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="clock" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:textStyle="bold">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="매주 "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/mon"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/wed"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/thu"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/fri"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/sat"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_mon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/mon" />

            <Button
                android:id="@+id/button_tue"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/tue" />

            <Button
                android:id="@+id/button_wed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/wed" />

            <Button
                android:id="@+id/button_thu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/thu" />

            <Button
                android:id="@+id/button_fri"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/fri" />

            <Button
                android:id="@+id/button_sat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/sat" />

            <Button
                android:id="@+id/button_sun"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/button_unselect"
                android:shadowColor="@color/colorWhite"
                android:text="@string/sun" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16sp"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"

            android:layout_marginRight="5dp"
            android:text="@string/cancel" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/save"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/delete"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>